menu and options added

--- a/src/app/game-over-dialog/game-over-dialog.component.html
+++ b/src/app/game-over-dialog/game-over-dialog.component.html
@@ -1,2 +1,4 @@
+<div class="display-4">
 <p>Game Over. Go home!</p>
-<button (click)="reset()">Play Again?</button>
+<button class= "center btn btn-dark" (click)="reset()">Main Menu</button>
+</div>
