--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -16,9 +16,11 @@
     padding: 0px;
 }
 .centerFlex{
-    display:flex;
+    display:inline-block;
     align-items: center;
     justify-content: center;
+    margin-left: 6rem;
+    margin-top: 1rem;
 }
 .dotred {
     height: 50px;
@@ -41,4 +43,75 @@
     margin-left: 3px;
     margin-top: 3px;
  
+  }
+.box{
+    background: #c8c0d5;
+    display: flex;
+    flex-direction:row;
+    justify-content: baseline;
+    align-items: center;
+}
+.boxContent{
+    background: #c8c0d5;
+    margin: 2rem;
+}
+.addPadding{
+    margin-left: 10rem;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  html,
+  body {
+    font-family: 'Fira Code', monospace;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+  }
+  
+  main {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  p {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    font-size: 3rem;
+    background: linear-gradient(to bottom, #000, #000 60%, #fff 60%, #fff 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-repeat: no-repeat;
+    transition: background 0.2s ease-out;
+    white-space: nowrap;
+  }
+  
+  span {
+    position: relative;
+  }
+  
+  span:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 15px;
+    background: #000;
+    bottom: 9px;
+    transition: all 0.2s ease-out;
+  }
+  
+  p:hover {
+    background-position: 0 11px;
+  }
+  
+  span:hover:before {
+    transform: translateY(10px)
   }
