--- a/src/app/avatar-options-menu/avatar-options-menu.component.html
+++ b/src/app/avatar-options-menu/avatar-options-menu.component.html
@@ -5,5 +5,6 @@
     <div class="container display-4 center">
         <div id="options" (click)="setManchesterDerby()" ><p>Manchester Derby</p></div>
       <div id="options" (click)="setFireandWater()" ><p>Fire&Water</p></div>
+      <div id="options" (click)="setGS()" ><p>Fatman vs Joker</p></div>
     </div>
 </div>
